<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:overScrollMode="never"
tools:context=".ui.AmountInRails.AmountInRailsActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <RelativeLayout
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/temca_logo_mini"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logoImageView"
            android:layout_centerVertical="true"
            android:fontFamily="@font/mitr_regular"
            android:textColor="#0E4194"
            android:textSize="20sp"
            android:text="@string/typeAndAmountInRails"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeStepGranularity="5sp"/>

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:onClick="onclickChooseTypeCable"
        android:id="@+id/cardViewWireType"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ชนิดสายไฟ"
                android:textSize="16sp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/typeCableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="IEC01"
                android:textSize="16sp"
                android:layout_toLeftOf="@+id/iconWireType"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:fontFamily="@font/mitr_regular" />

            <ImageView
                android:id="@+id/iconWireType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    // Circuit Breaker
    <androidx.cardview.widget.CardView
        android:onClick="onClickChooseSizeCable"
        android:id="@+id/cardViewSizeCable"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ขนาดสาย"
                android:textSize="16sp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/cableSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="2.5 mm2"
                android:textSize="16sp"
                android:layout_toLeftOf="@+id/iconCircuitBreakere"
                android:fontFamily="@font/mitr_regular"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iconCircuitBreakere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    // SizeConduit
    <androidx.cardview.widget.CardView
        android:onClick="onClickChooseSizeConduit"
        android:id="@+id/cardViewSizeConduit"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ขนาดราง"
                android:textSize="16sp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/SizeConduitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="50x75 mm."
                android:textSize="16sp"
                android:layout_toLeftOf="@+id/iconSizeConduit"
                android:fontFamily="@font/mitr_regular"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iconSizeConduit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:onClick="calculatorOnClick"
        android:id="@+id/btnCalInPipeSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/btnBlue"
        android:fontFamily="@font/mitr_regular"
        android:background="@drawable/btn_rounded"
        android:text="@string/calculate"/>

    <LinearLayout
        android:id="@+id/wayBackActivity1"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:onClick="backOnClick"
                android:layout_marginLeft="30dp"
                android:id="@+id/textViewTerms"
                android:drawableStart="@drawable/ic_exit"
                android:drawableTint="#092B61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:textColor="#092B61"
                android:text="@string/back_Button"/>

            <TextView
                android:onClick="sponsorOnClick"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:id="@+id/textViewSponsers"
                android:drawableStart="@drawable/ic_engineering_24px"
                android:drawableTint="#092B61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:textColor="#092B61"
                android:text="@string/sponsor"/>
        </RelativeLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/tableBeforeCalculateInPipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btnBlue">

        <RelativeLayout
            android:paddingTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewShowInPipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:text="ผลการคำนวณ "
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textViewShow2InPipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/textViewShowInPipe"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewMaxCable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textViewShowInPipe"
                android:text="จำนวนสายไฟสูงสุด"
                android:textSize="16sp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewResultMaxCable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textViewShow2InPipe"
                android:layout_alignParentRight="true"
                android:text="null เส้น"
                android:textSize="16sp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/white" />

            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_below="@+id/textViewShow8InPipe"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:onClick="pipeSizeReportOnClick"
                    android:id="@+id/btnCreateReports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cornerRadius="10dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="#0E4194"
                    android:background="@drawable/btn_rounded_white"
                    android:fontFamily="@font/mitr_regular"
                    android:text="@string/create_report"/>

                <RelativeLayout
                    android:id="@+id/wayBackActivity2"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:onClick="backOnClick"
                        android:id="@+id/textViewTerm"
                        android:drawableStart="@drawable/ic_exit"
                        android:drawableTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mitr_regular"
                        android:textColor="@color/white"
                        android:text="@string/back_Button"/>

                    <TextView
                        android:onClick="sponsorOnClick"
                        android:layout_alignParentRight="true"
                        android:id="@+id/textViewSponser"
                        android:drawableStart="@drawable/ic_engineering_24px"
                        android:drawableTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mitr_regular"
                        android:textColor="@color/white"
                        android:text="@string/sponsor"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>