<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:overScrollMode="never"
tools:context=".ui.Transformer.TransformerActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <RelativeLayout
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/temca_logo_mini"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logoImageView"
            android:layout_centerVertical="true"
            android:fontFamily="@font/mitr_regular"
            android:textColor="#0E4194"
            android:text="ขนาดสายหม้อแปลง"
            android:textSize="30dp"/>

    </RelativeLayout>


    <!--  Pressure-->
    <androidx.cardview.widget.CardView
        android:onClick="choosePressureOnClick"
        android:id="@+id/cardViewPressure"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ขนาดแรงดัน"
                android:textSize="18dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/TextViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="230/400 V"
                android:textSize="18dp"
                android:layout_toLeftOf="@+id/iconPressure"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:fontFamily="@font/mitr_regular" />

            <ImageView
                android:id="@+id/iconPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

<!--    transformerSize-->


    // GroupInstallation
    <androidx.cardview.widget.CardView
        android:onClick="GroupInstallationOnClick"
        android:id="@+id/cardViewSizeCable"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="กลุ่มการติดตั้ง"
                android:textSize="18dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/TextViewGroupInstallation"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="เดินเคเบิลแบบระบายอากาศ"
                android:textSize="18dp"
                android:layout_toLeftOf="@+id/iconGroupInstallation"
                android:fontFamily="@font/mitr_regular"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iconGroupInstallation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    // CableType
    <androidx.cardview.widget.CardView
        android:onClick="sizeCableTypeOnClick"
        android:id="@+id/cardViewSizeConduit"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ชนิดสายไฟ"
                android:textSize="18dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/TextViewCableType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="NYY"
                android:textSize="18dp"
                android:layout_toLeftOf="@+id/iconCableType"
                android:fontFamily="@font/mitr_regular"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iconCableType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:onClick="transformerSizeOnClick"
        android:id="@+id/cardViewWireType"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ขนาดหม้อแปลง"
                android:textSize="18dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/TextViewTransformerSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="500 kVA"
                android:textSize="18dp"
                android:layout_toLeftOf="@+id/iconTransformerSize"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                android:fontFamily="@font/mitr_regular" />

            <ImageView
                android:id="@+id/iconTransformerSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    // Distance
    <androidx.cardview.widget.CardView
        android:onClick="setDistanceOnClick"
        android:id="@+id/cardViewAmountCable"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="ระยะทาง(M.)"
                android:textSize="18dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>
            
            <EditText
                android:id="@+id/editTextDistanceInTransformer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewDistance"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:maxLength="4"
                android:layout_marginLeft="10dp"
                android:hint="20"
                android:fontFamily="@font/mitr_regular"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textColorHint="@color/defaulthint"
                android:textColor="@color/defaulthint"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>





    <com.google.android.material.button.MaterialButton
        android:onClick="calculatorTransformerOnClick"
        android:id="@+id/btnCalInPipeSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:backgroundTint="@color/btnBlue"
        android:fontFamily="@font/mitr_regular"
        android:text="@string/calculate"/>

    <LinearLayout
        android:id="@+id/wayBackActivity1"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:onClick="backOnClick"
                android:layout_marginLeft="30dp"
                android:id="@+id/textViewTerms"
                android:drawableStart="@drawable/ic_exit_to_app_24px"
                android:drawableTint="#092B61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:textColor="#092B61"
                android:text="@string/back_Button"/>

            <TextView
                android:onClick="sponsorOnClick"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:id="@+id/textViewSponsers"
                android:drawableStart="@drawable/ic_engineering_24px"
                android:drawableTint="#092B61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:textColor="#092B61"
                android:text="@string/sponsor"/>
        </RelativeLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/tableBeforeCalculateInTransformer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btnBlue">

        <RelativeLayout
            android:paddingTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:text="ผลการคำนวณ "
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewNull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/textViewTitleResult"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewElectricCurren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textViewTitleResult"
                android:text="พิกัดกระแส"
                android:textSize="16dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textViewElectricCurrenResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textViewNull"
                android:layout_alignParentRight="true"
                android:text="null A"
                android:textSize="16dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/white" />



            <TextView
                android:id="@+id/textViewCableSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textViewElectricCurren"
                android:text="ขนาดสายไฟฟ้า"
                android:textSize="16dp"
                android:fontFamily="@font/mitr_regular"
                android:textColor="@color/white" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewResultTransformer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textViewCableSize"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/result_transformer_list" />

            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_below="@+id/recyclerViewResultTransformer"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:onClick="TransformerReportOnClick"
                    android:id="@+id/btnCreateReports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cornerRadius="10dp"
                    android:padding="10dp"
                    android:textSize="20dp"
                    android:textColor="#0E4194"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/mitr_regular"
                    android:text="@string/create_report"/>

                <RelativeLayout
                    android:id="@+id/wayBackActivity2"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:onClick="backOnClick"
                        android:id="@+id/textViewTerm"
                        android:drawableStart="@drawable/ic_exit_to_app_24px"
                        android:drawableTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mitr_regular"
                        android:textColor="@color/white"
                        android:text="@string/back_Button"/>

                    <TextView
                        android:onClick="sponsorOnClick"
                        android:layout_alignParentRight="true"
                        android:id="@+id/textViewSponser"
                        android:drawableStart="@drawable/ic_engineering_24px"
                        android:drawableTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mitr_regular"
                        android:textColor="@color/white"
                        android:text="@string/sponsor"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>